deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nextgen-edc
  labels:
    name: nextgen-edc
